# qr-code-generator-wasm

./: Cargo.toml  LICENSE.md  README.md
pkg/: qrcodegen_no_heap.d.ts  qrcodegen_no_heap.js  qrcodegen_no_heap_bg.wasm  qrcodegen_no_heap_bg.wasm.d.ts
src/: lib.rs
